work around flightmap serialization issues